test6 with Auth

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,6 +4,7 @@
     <title><%= title %></title>
 </head>
 <body>
+    <%- include('partials/header') %>
     <h1><%= message %></h1>
 </body>
 </html>
