--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,18 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Property Dashboard</a>
+      <div class="logo">
+        <!-- Link to the homepage -->
+        <a href="/">
+          <img src="/images/logo.png" alt="Netsa Properties Logo" style="height:30px; width:auto; object-fit:contain; margin-bottom:30%;">
+        </a>
+      </div>
+      <a class="navbar-brand" href="#">Netsa Homes</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
+      
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a class="nav-link active" href="/">Home</a>
